--- a/src/componentes/InstagramCell.css
+++ b/src/componentes/InstagramCell.css
@@ -155,4 +155,28 @@
   overflow: hidden;
   width: 100%;
 }
+
+.instagram-placeholder {
+  background-color: #f8f9fa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+}
+
+.instagram-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #333;
+}
+
+.instagram-icon i {
+  font-size: 2rem;
+  margin-bottom: 8px;
+}
+
+.instagram-icon span {
+  font-size: 14px;
+}
   
