--- a/src/Pages/Register.css
+++ b/src/Pages/Register.css
@@ -65,3 +65,22 @@
     text-decoration: underline;
   }
   
+  @media (max-width: 768px) {
+    .formContainer {
+      width: 95%;
+      padding: 15px;
+    }
+    
+    .logo {
+      font-size: 28px;
+    }
+    
+    .input {
+      height: 35px;
+    }
+    
+    .enterButton {
+      padding: 8px;
+    }
+  }
+  
